<resources>
    <string name="app_name">쉐어마켓</string>
    <string name="app_description_title">무료로 나누어 드려요</string>
    <string name="app_description_content">사용하지 않는 물건들을 버리지 마세요.\n나눔을 통해 환경을 개선해봅시다!</string>
    <string name="set_my_location">내 지역 설정하기</string>
    <string name="search_location">예) 판교역로 235, 분당 준공, 삼평동 681</string>
    <string name="no_location_result">찾으시는 결과가 없습니다.\n검색을 통해 주소를 찾아보세요!</string>
    <string name="no_my_board_result">작성하신 게시글이 없습니다.\n홈으로 이동하여 글을 작성해보세요!</string>
    <string name="no_heart_board_result">좋아요를 누른 게시글이 없습니다.\n홈으로 게시글에 관심을 표현해보세요!</string>
    <string name="no_result_board">찾으시는 제품에 대한 결과가 없습니다.\n다른 키워드로 다시 검색해주세요!</string>
    <string name="search_now_location">현재 위치로 검색</string>
    <string name="require_location_permission">"앱을 실행하려면 위치 접근 권한이 필요합니다."</string>
    <string name="gps_check">"GPS가 켜져있는지 확인해주세요!"</string>
    <string name="internet_check">인터넷 연결을 확인해주세요!</string>
    <string name="account_vertification">회원 가입</string>
    <string name="phone_vertification_information">간단히 클릭만으로 <b>쉐어마켓의 나눔꾼</b>이 되어보세요! 아래에 버튼을 클릭하여 가입해보세요.</string>
    <string name="enter_phone_number">휴대폰 번호를 입력해주세요</string>
    <string name="enter_code_number">인증번호를 입력해주세요</string>
    <string name="code_submit">인증번호 확인</string>
    <string name="code_repeat">인증번호 재전송</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="submit">제출</string>
    <string name="login_with_google">구글 로그인</string>
    <string name="login_with_facebook">페이스북 로그인</string>
    <string name="login_with_kakao">카카오 로그인</string>
    <string name="write">게시글 작성</string>
    <string name="tab_home">홈</string>
    <string name="tab_category">카테고리</string>
    <string name="tab_tree">캠페인</string>
    <string name="tab_chat">채팅</string>
    <string name="tab_my">My</string>
    <string name="my_information">내 정보</string>
    <string name="welcome_message">쉐어마켓에 오신 것을 환영합니다!\nnull님의 소속을 선택해주세요.</string>
    <string name="register_ok">가입 완료</string>
    <string name="sosock_check">회원님의 소속을 선택해주세요 :D</string>
    <string name="select_user_toolbar_title">거래 유저</string>
    <string name="campain_header">나눔으로 나무심기</string>
    <string name="campain_sub_header">현재까지 심어진 트리 코인이 무려 %s개!</string>
    <string name="campain_click_me">나무를 클릭해보세요!</string>
    <string name="plnat_tree_seed_text">나눔하고 얻은 나무 심기</string>
    <string name="giving_tree_coin_not_enough">트리 코인이 부족해요!\n나눔을 완료하면 코인을 얻을 수 있어요 :D</string>
    <string name="success_give_tree_coin">%s님의 씨앗을 성공적으로 기부했어요!\n나누면 나눌수록 환경이 개선될거에요 :D</string>
    <string name="campain_dialog_title">나눔 &amp; 나무 캠페인</string>
    <string name="campain_dialog_content">
        축하드려요 %s님! 😀\n\n
        나눔 &amp; 나무 캠페인에서 사용할 수 있는 트리코인 2개를 획득하셨어요🎈\<n></n>
        트리 코인은 나눔활동 완료시 자동으로 지급됩니다.\n\n
        %s님의 나눔으로 환경을 개선하고, 나무도 심어보세요🌳
    </string>
    <string name="campain_dialog_question_title">나눔 &amp; 나무 캠페인이란?</string>
    <string name="campain_dialog_question_content">
        안녕하세요 %s님! 😀\n
        나눔을 완료하면 지급되는 \'트리 코인\'으로 Covid-19로 단체 활동이 제한되는 환경에서도 유저들이 온라인상에서 다 같이 모여 실제 나무를 심을 수 있도록 도와드립니다.\n\n
        나무 심기를 가장 많이 참여한 Top5 나눔꾼들은 나눔나무에 프로필 열매가 자라납니다!\n\n
        나눔을 하면 할수록 버리는 물건도 줄어들고, 나무도 심을 수 있으니 환경 개선을 위해 많은 참여 부탁드립니다🌳
    </string>
    <string name="personal">개인</string>
    <string name="agency">기관</string>
    <string name="company">기업</string>
    <string name="realtime_env_title_1">%s그루의 나무를 보호했어요!</string>
    <string name="realtime_env_title_2">바다 위의 플라스틱이 %sg만큼 줄어들었어요!</string>
    <string name="realtime_env_title_3">이산화탄소 배출량이 %sg만큼 감소했어요!</string>
    <string name="realtime_env_title_4">쓰레기 매립 면적을 %sm²만큼 절감시켰어요!</string>
    <string name="realtime_env_title_5">이웃 사회와의 온도가 %s℃만큼 높아졌어요!</string>
    <string name="realtime_env_content_1">숲을 찢어 물건을 만든다. 한 사람당 일 평생 30년생 나무 230그루나 소비한다고 합니다.</string>
    <string name="realtime_env_content_2">한국인의 플라스틱 소비량은 세계 상위권에 해당하며, 바다 위는 점점 플라스틱으로 가득 차 해양 생물들이 어려움을 겪고 있습니다.</string>
    <string name="realtime_env_content_3">쓰레기 1톤이 연소 될 때마다 약 1.1 톤의 이산화탄소가 대기로 방출되어 온실가스 배출에 기여합니다.</string>
    <string name="realtime_env_content_4">쓰레기 매립은 폐기물, 농약, 중금속 등 유해한 물질이 토양에 축적되어 오염물질을 발생시킵니다.</string>
    <string name="realtime_env_content_5">나눔을 하면 이웃간의 따뜻한 마음이 생겨납니다. 주위의 사용하지 않는 물건을 그냥 버리지말고 서로 나누어봅시다.</string>
    <string name="require_give_bill_title">📦 [나눔완료] %s\n\n\n</string>
    <string name="require_give_bill_message">✅ 나눔을 성공적으로 완료했어요!\n✅ 필요시 나눔을 받으신 분께서는 아래 버튼을 클릭하여 기부금 영수증을 발급해주세요!\n\n❌ 기부금 영수증 중복 신청은 무효처리 됩니다.\n❌ 또한, 허위 신청시 불이익이 발생할 수 있습니다.\n📄 자세한 신청 방법은 My섹션에서 확인해보세요!</string>
    <string name="require_give_bill_notification">🌱 [알림] 채팅창을 확인해주세요 🌱</string>
    <string name="give_bill_btn">기부금 영수증 신청하기</string>
    <string name="fab_exchange">교환해요</string>
    <string name="fab_write">무료나눔</string>
    <string name="upload_success">게시글을 성공적으로 등록하였습니다.</string>
    <string name="upload_fail">알 수 없는 오류로 업로드에 실패하였습니다.</string>
    <string name="update_success">게시글을 성공적으로 수정하였습니다.</string>
    <string name="update_fail">알 수 없는 오류로 게시글 수정에 실패하였습니다.</string>
    <string name="write_activity_toolbar_title">무료나눔 글쓰기</string>
    <string name="exchange_activity_toolbar_title">교환해요 글쓰기</string>
    <string name="update_activity_toolbar_title">게시글 수정</string>
    <string name="done">완료</string>
    <string name="title">제목</string>
    <string name="category">카테고리</string>
    <string name="content_share_hint">나눔하실 물건에 대한 설명을 작성해주세요 :D\n\nEx) 안 쓰는 키보드 무료로 나눠드립니다!\n무료인 대신 택배는 착불입니다.\n채팅으로 연락주세요~^^</string>
    <string name="content_exchange_hint">교환하실 물건에 대한 설명을 작성해주세요 :D\n\nEx) 적정한 가격대의 소파 교환하실 분 찾습니다.\n가격대는 20만원대 생각하고 있습니다!\n채팅 부탁드려요~^^</string>
    <string name="give">드릴게요!</string>
    <string name="need">필요해요!</string>
    <string name="exchange">교환해요!</string>
    <string name="give_text">나눔</string>
    <string name="need_text">요청</string>
    <string name="exchange_text">물물교환</string>
    <string name="personal_information">\&quot; 개인이신가요? &#160;\&quot;&#160;\n\n쓰지 않는 물건들을 버리지 말고 주변 이웃과 서로 나누어 보세요! 나눔을 통해 환경을 개선할 수 있으며, 회원님 또한 누군가의 나눔을 받을 수 있답니다.</string>
    <string name="agency_information">\&quot; 기관이신가요? &#160;\&quot;&#160;\n\n기관은 보육원, 요양원, 고아원 등 모든 복지 시설에 해당됩니다. 시설 운영에 필요한 물품들을 개인이나 기업으로부터 나눔받을 수 있답니다.</string>
    <string name="company_information">\&quot; 기업이신가요? &#160;\&quot;&#160;\n\n기업은 기관이 필요한 물품들을 나누어줌으로써 사회 공헌과 더불어 기부금 영수증을 발급받을 수 있답니다! 기부금 영수증에 쓰여진 금액만큼 세금을 감면받을 수 있습니다.</string>
    <string name="title_empty">제목란이 비어 있어요!</string>
    <string name="title_not_enough">제목을 최소 2글자 이상 채워주세요!</string>
    <string name="category_empty">카테고리를 선택해주세요!</string>
    <string name="content_not_enough">내용을 최소 10글자 이상 채워주세요!</string>
    <string name="content_empty">내용란이 비어 있어요!</string>
    <string name="option_empty">항목을 선택해주세요!</string>
    <string name="over_limit_msg">이미지를 최대 5개까지 선택하실 수 있습니다.</string>
    <string name="capture_new_image">사진 캡쳐</string>
    <string name="change_album_text">갤러리 선택</string>
    <string name="all_images">전체</string>
    <string name="permission_storage_never_ask">권한을 허용하지 않으면 이미지를 등록하실 수 없어요!</string>
    <string name="profile_change">프로필을 성공적으로 변경하였습니다.</string>
    <string-array name="category_title">
        <item>가전디지털</item>
        <item>패션의류/잡화</item>
        <item>출산/유아동</item>
        <item>식품</item>
        <item>뷰티</item>
        <item>주방용품</item>
        <item>생활용품</item>
        <item>홈인테리어</item>
        <item>스포츠/레저</item>
        <item>자동차용품</item>
        <item>도서/음반/DVD</item>
        <item>완구/취미</item>
        <item>문구/오피스</item>
        <item>헬스</item>
        <item>여행/티켓</item>
        <item>기타 물품</item>
    </string-array>
    <string-array name="faq_titles">
        <item>Q. 기부금 영수증이 무엇인가요?</item>
        <item>Q. 기부금 영수증은 어떤 기관이나 발급해줄 수 있는건가요?</item>
        <item>Q. 나눔을 하고 나서 기부금 영수증을 어떻게 신청할 수 있나요?</item>
        <item>Q. 나눔으로 나무심기 캠페인이 궁금해요!🌳</item>
        <item>Q. 제 나눔으로 개선되는 환경을 수치로 보고 싶어요!</item>
        <item>Q. 게시글을 작성할 때 해서는 안되는 부분이 있나요?</item>
        <item>Q. 장난식으로 채팅을 보내는 사용자가 있어요!</item>
        <item>Q. 프로필 사진을 변경하고 싶어요!</item>
        <item>Q. 게시글 내용을 스크린샷이 아닌 채팅 형태로 공유하고 싶어요.</item>
        <item>Q. 제가 올린 게시글이 화면에 보이지 않아요.</item>
        <item>Q. 상대방 채팅 푸시 알림을 받고 싶지 않아요.</item>
        <item>Q. 쉐어마켓을 이용하다가 오류가 발생했어요!</item>
    </string-array>
    <string name="survey_type_1">회원탈퇴 후 재가입을 위해서</string>
    <string name="survey_type_2">유저간의 거래 활성도가 낮아서</string>
    <string name="survey_type_3">앱을 사용하기 불편해서</string>
    <string name="survey_type_4">앱을 더 이상 사용하기 않아서</string>
    <string name="survey_type_5">기타 사유</string>
    <string name="survey_type_5_edit_hint">탈퇴하시려는 사유를 10자 이상 작성해주세요 :D</string>
    <string name="unregister">회원탈퇴</string>
    <string name="no_chat_user_result">유저들과 채팅하신 기록이 없습니다.\n거래를 위해 채팅을 하시면 유저 리스트가 갱신됩니다.</string>
</resources>