<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/wemef_semibold"
                android:text="@string/unregister"
                android:textColor="@color/black"
                android:textSize="@dimen/toolbar_title_size"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/survey_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                app:layout_constraintTop_toBottomOf="@+id/title">

                <RadioButton
                    android:id="@+id/survey_type_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/survey_type_1" />

                <RadioButton
                    android:id="@+id/survey_type_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/survey_type_2" />

                <RadioButton
                    android:id="@+id/survey_type_3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/survey_type_3" />

                <RadioButton
                    android:id="@+id/survey_type_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/survey_type_4" />

                <RadioButton
                    android:id="@+id/survey_type_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/survey_type_5" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/survey_type_5_layout"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/edit_text_gray_border"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@+id/survey_radio_group">

                <EditText
                    android:id="@+id/survey_type_5_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="6dp"
                    android:background="@null"
                    android:gravity="left|top"
                    android:hint="@string/survey_type_5_edit_hint"
                    android:maxLength="100"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>