<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.app.buna.sharingmarket.viewmodel.MainViewModel" />
    </data>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/main_frame_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toTopOf="@+id/main_tab_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="@dimen/toolbar_height"/>

        <!--
        tabRippleColor -> 클릭 시, 'TabItem' 이펙트 색상 설정
        -->
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/main_tab_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            app:layout_constraintBottom_toBottomOf="parent"
            app:tabMode="fixed"
            app:tabRippleColor="@null">
            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_item_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_home"
                android:icon="@drawable/tab_icon_home"/>
            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_item_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_category"
                android:icon="@drawable/tab_icon_category"/>
            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_item_chat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_chat"
                android:icon="@drawable/tab_icon_chat"/>
            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_item_my"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:icon="@drawable/tab_icon_my"
                android:text="@string/tab_my"/>
        </com.google.android.material.tabs.TabLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>