<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.app.buna.sharingmarket.viewmodel.SelectUserViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.SelectUserActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:elevation="3dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:fontFamily="@font/wemef_semibold"
                android:text="@string/select_user_toolbar_title"
                android:textColor="@color/black"
                android:textSize="@dimen/toolbar_title_size" />

            <TextView
                android:id="@+id/done_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:enabled="false"
                android:gravity="right"
                android:text="@string/ok"
                android:textColor="@color/gray_40"
                android:textSize="@dimen/toolbar_text_size"/>

        </androidx.appcompat.widget.Toolbar>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/user_select_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            app:layout_constraintTop_toBottomOf="@+id/tool_bar"
            tools:listitem="@layout/layout_select_user"
            android:visibility="gone"/>

        <!--No Result View-->
        <!--검색결과 없을 때 보여짐-->
        <LinearLayout
            android:id="@+id/no_result_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/no_result_character"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/no_chat_user_result"
                android:textColor="@color/gray_70"
                android:textSize="16sp"
                android:gravity="center"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>