<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.app.buna.sharingmarket.viewmodel.ThirdInitialViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.InitialThirdFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="12dp">

            <TextView
                android:id="@+id/register_text_view"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="8dp"
                android:text="@string/account_vertification"
                android:textColor="@color/black"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_20"
                app:layout_constraintTop_toBottomOf="@+id/register_text_view"/>

            <LinearLayout
                android:id="@+id/vertification_layout"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:gravity="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/main_lottie_image"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/title"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/message" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:text="@string/phone_vertification_information"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/vertification_layout"
                android:layout_marginTop="30dp"
                android:orientation="vertical">

                <!--구글 로그인 버튼-->
                <LinearLayout
                    android:id="@+id/google_sign_in_btn"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:onClick="@{()->viewModel.signInGoogle()}"
                    android:orientation="horizontal"
                    android:clickable="true"
                    android:background="@drawable/btn_google_login">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/google_logo"
                        android:layout_gravity="center"
                        android:layout_marginLeft="24dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/login_with_google"
                        android:gravity="center"
                        android:textColor="@color/gray"
                        android:textStyle="bold"
                        android:textSize="16sp" />
                </LinearLayout>


                <!--페이스북 로그인 버튼-->
                <LinearLayout
                    android:id="@+id/facebook_sign_in_btn"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="12dp"
                    android:clickable="true"
                    android:orientation="horizontal"
                    android:background="@drawable/btn_facebook_login">
                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:background="@drawable/facebook_logo"
                        android:layout_gravity="center"
                        android:layout_marginLeft="24dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/login_with_facebook"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="16sp" />

                </LinearLayout>


                <!--카카오 로그인 버튼-->
                <!--<LinearLayout
                    android:id="@+id/kakao_sign_in_btn"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="12dp"
                    android:clickable="true"
                    android:orientation="horizontal"
                    android:background="@drawable/btn_kakao_login"
                    android:onClick="@{()->viewModel.signInKakao()}">
                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:background="@drawable/kakao_logo"
                        android:layout_gravity="center"
                        android:layout_marginLeft="24dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/login_with_kakao"
                        android:gravity="center"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="16sp" />

                </LinearLayout>-->
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</layout>